--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h4 class="info-label--error error-name hidden">*Please enter name valid!!!!</h3>
             </div>
             <div class="info">
-                <h3 class="info-label">Contact Number</h3>
+                <h3 class="info-label">Contact NumberPhone</h3>
                 <input type="text" class="info-input" placeholder="0817245552" id="phone_input">
                 <h4 class="info-label--error error-phone hidden">*Please enter phone valid!!</h3>
             </div>
@@ -53,16 +53,15 @@
             </li>
         </ul>
         <div class="row center">
-            <input type="range" class="status-value" min="0" max="80" value="40" id="rangeInput">
+            <input type="range" class="status-value" min="0" max="80" value="40" id="rangeInput" placeholder="Add your comments...">
         </div>
         <div class="row">
-            <textarea name="" class="message" id="" cols="30" rows="8" placeholder="Add your comments">
-
-            </textarea>
+            <textarea placeholder="Add your comment!!" cols="30" rows="4" id=""></textarea>
         </div>
         <div class="row">
             <button class="submit">SUBMIT</button>
         </div>
+        
     </form>
     <script>
 
@@ -179,13 +178,6 @@ function isValidEmail(email) {
         }
     });
 });
-
-
-
-
-
-
-
     </script>
 </body>
 </html>
